<resources>
    <string name="app_name">WatsonTV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_label">Log In</string>
    <string name="logout_label">Logout</string>
    <string name="login_goToSignup">Signup ></string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="userId">userId</string>
    <string name="userName">userName</string>
    <string name="userEmail">userEmail</string>
    <string name="signup_goToLogin"><![CDATA[< Login]]></string>
    <string name="sign_up_label">Signup</string>
    <string name="name_hint">Name</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="movies_label">Movies</string>
    <string name="series_label">Series</string>
    <string name="watchlist_label">Watchlist</string>
    <string name="collections_label">Collections</string>
    <string name="favorites_label">Favorites</string>
    <string name="profile_label">Profile</string>
    <string name="dashboard_greeting">Welcome,</string>
    <string name="dashboard_watch_later">Up next to watch</string>
    <string name="dashboard_see_more">See more</string>
    <string name="dashboard_upcoming_schedule">Upcoming Schedule</string>
    <string name="profilePic" />
    <string name="profile_menu_stats">Stats</string>
    <string name="profile_menu_settings">Settings</string>
    <string name="profile_menu_friends">Friends</string>
    <string name="go_details"><![CDATA[>]]></string>
    <string name="stats_label">Profile - Stats</string>
    <string name="profile_stats_series_label">Watched Series</string>
    <string name="profile_stats_series_lw_label">LAST WEEK</string>
    <string name="profile_stats_series_at_label">ALL TIME</string>
    <string name="profile_stats_movies_label">Watched Movies</string>
    <string name="profile_stats_genres_label">Favorite Genres</string>
    <string name="profile_menu_collections">Collections</string>
    <string name="users_label">Users</string>
    <string name="filter">Filter</string>
    <string name="friends_filter_checkbox">Only My Friends</string>
    <string name="media_detail_runningTime">Running Time:</string>
    <string name="media_detail_synopsis_label">Synopsis</string>
    <string name="media_detail_cast_label">Cast</string>
    <string name="media_detail_released_label">Released:</string>
    <string name="media_detail_seasons_label">Seasons</string>
    <string name="empty_cast_label">No Cast added yet</string>
    <string name="empty_seasons_label">No Seasons added yet</string>
    <string name="media_detail_broadcaster">on</string>
    <string name="not_yet_released">Unreleased</string>
    <string name="empty_list_label">No Media yet</string>
    <string name="edit_label">Profile - Edit</string>
    <string name="save_edit_label">Save</string>
    <string name="remove_watched">Uncheck as Watched</string>
</resources>
