<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard_label" />
    </group>

    <item android:title="Media">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_series"
                    android:icon="@drawable/ic_live_tv_black_24dp"
                    android:title="@string/series_label" />
                <item
                    android:id="@+id/nav_movies"
                    android:icon="@drawable/ic_local_movies_black_24dp"
                    android:title="@string/movies_label" />
            </group>
        </menu>
    </item>

    <item android:title="User">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_collections"
                    android:icon="@drawable/ic_collections_bookmark_black_24dp"
                    android:title="@string/collections_label" />
                <item
                    android:id="@+id/nav_watchlist"
                    android:icon="@drawable/ic_remove_red_eye_black_24dp"
                    android:title="@string/watchlist_label" />
                <item
                    android:id="@+id/nav_favorites"
                    android:icon="@drawable/ic_bookmark_black_24dp"
                    android:title="@string/favorites_label" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/profile_label" />
            </group>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_power_settings_new_black_24dp"
                    android:title="@string/logout_label" />
        </menu>
    </item>

</menu>
