<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/dashboard_greeting"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dashboard_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="username"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_live_tv_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/dashboard_tv_stats_series_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="99 days"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/dashboard_tv_stats_series_hours"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="18 hours"
            app:layout_constraintEnd_toEndOf="@+id/dashboard_tv_stats_series_days"
            app:layout_constraintStart_toStartOf="@+id/dashboard_tv_stats_series_days"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tv_stats_series_days" />

        <TextView
            android:id="@+id/dashboard_tv_stats_series_mins"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="19 mins"
            app:layout_constraintEnd_toEndOf="@+id/dashboard_tv_stats_series_days"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="@+id/dashboard_tv_stats_series_days"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tv_stats_series_hours" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_local_movies_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/dashboard_tv_stats_movies_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="51 days"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/dashboard_tv_stats_movies_hours"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="11 hours"
            app:layout_constraintEnd_toEndOf="@+id/dashboard_tv_stats_movies_days"
            app:layout_constraintStart_toStartOf="@+id/dashboard_tv_stats_movies_days"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tv_stats_movies_days" />

        <TextView
            android:id="@+id/dashboard_tv_stats_movies_mins"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:text="30 mins"
            app:layout_constraintEnd_toEndOf="@+id/dashboard_tv_stats_movies_hours"
            app:layout_constraintStart_toStartOf="@+id/dashboard_tv_stats_movies_hours"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tv_stats_movies_hours" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_collections_bookmark_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/dashboard_tv_stats_series_days"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dashboard_tv_stats_collections_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3,405 episodes"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/dashboard_tv_stats_collections_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="37 movies"
            app:layout_constraintEnd_toEndOf="@+id/dashboard_tv_stats_collections_episodes"
            app:layout_constraintStart_toStartOf="@+id/dashboard_tv_stats_collections_episodes"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tv_stats_collections_episodes" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_watch_later_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tv_stats_series_mins" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dashboard_watch_later"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:id="@+id/dashboard_tv_watch_later_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dashboard_see_more"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_today_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dashboard_upcoming_schedule"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/dashboard_tv_upcoming_schedule_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/dashboard_see_more"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>